<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitymyfood">

    <Button
        android:id="@+id/buttonNew"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/addFood"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editDateOfPurchase"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="@+id/editDateOfPurchase"
        app:layout_constraintTop_toBottomOf="@+id/editDateOfPurchase"
        app:layout_constraintVertical_bias="0.102" />

    <Button
        android:id="@+id/bFoodShow1"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="bFoodShowClicked"
        android:text="@string/showFood"
        app:layout_constraintBottom_toBottomOf="@+id/buttonNew"
        app:layout_constraintEnd_toStartOf="@+id/buttonNew"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonNew"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textMyFood"
        android:layout_width="259dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/textMyFood"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imagemyfood"
        android:layout_width="146dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textMyFood"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.149"
        app:srcCompat="@drawable/myfood" />

    <EditText
        android:id="@+id/editBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/brand"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/imagemyfood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toEndOf="@+id/imagemyfood"
        app:layout_constraintTop_toTopOf="@+id/imagemyfood"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editFlavour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/flavour"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/imagemyfood"
        app:layout_constraintEnd_toEndOf="@+id/editBrand"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editBrand"
        app:layout_constraintTop_toBottomOf="@+id/editBrand"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/quantity"
        app:layout_constraintBottom_toBottomOf="@+id/imagemyfood"
        app:layout_constraintEnd_toEndOf="@+id/editFlavour"
        app:layout_constraintStart_toStartOf="@+id/editFlavour"
        app:layout_constraintTop_toBottomOf="@+id/editFlavour" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editQuantity"
        app:layout_constraintStart_toStartOf="@+id/editQuantity"
        app:layout_constraintTop_toBottomOf="@+id/editQuantity"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/store"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editPrice"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editPrice"
        app:layout_constraintTop_toBottomOf="@+id/editPrice"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editAmountADay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/amountaday"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editStore"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editStore"
        app:layout_constraintTop_toBottomOf="@+id/editStore"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editDateOfPurchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/dateOfPurchase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editAmountADay"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editAmountADay"
        app:layout_constraintTop_toBottomOf="@+id/editAmountADay"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/textShowData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/showFood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <Button
        android:id="@+id/bFoodMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bmenu"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNew"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="592dp" />

</android.support.constraint.ConstraintLayout>